--- a/WebApplicationlaptop/Views/Cart/Index.cshtml
+++ b/WebApplicationlaptop/Views/Cart/Index.cshtml
@@ -169,8 +169,14 @@
                                 <a class="btn btn-danger btn-sm" asp-controller="Cart" asp-action="Remove" asp-route-id="@item.ProductId" title="Remove Item">
                                     <i class="fas fa-trash-alt"></i> Remove
                                 </a>
+                                <div class="cart-clear mt-4">
+                                    <a class="btn btn-danger" asp-controller="Cart" asp-action="Clear" title="Clear Cart">
+                                        <i class="fas fa-trash"></i> Clear Cart
+                                    </a>
+                                </div>
                             </td>
                         </tr>
+                     
                     }
                 }
                 else
@@ -182,8 +188,12 @@
                     </tr>
                 }
             </tbody>
+          
         </table>
+
         <div class="cart-footer">
+            @if (Model.CartItems.Count > 0)
+            {
             <h5 class="text-center mb-4">Step 1: Choose Shipping Address</h5>
             <div class="shipping-actions">
                 <div class="form-group">
@@ -260,12 +270,8 @@
                     </form>
                 }
             </div>
-
-            <div class="cart-clear mt-4">
-                <a class="btn btn-danger" asp-controller="Cart" asp-action="Clear" title="Clear Cart">
-                    <i class="fas fa-trash"></i> Clear Cart
-                </a>
-            </div>
+            }
+           
         </div>
     </div>
 
